fix: word wrap css on psyList

--- a/src/assets/styles/Calendar.css
+++ b/src/assets/styles/Calendar.css
@@ -20,7 +20,7 @@
 }
 .react-calendar__navigation button {
     width: 80px;
-    font-size: 2vw;
+    font-size: 1.6vw;
     color: #07387e;
     border-radius: 15px;
     background: none;
