--- a/src/pages/PsychologistList/styles.css
+++ b/src/pages/PsychologistList/styles.css
@@ -29,7 +29,6 @@
     justify-content: flex-start;
 }
 
-
 .psychologistListContainer .cardToggle {
     display: flex;
     align-items: bottom;
@@ -122,7 +121,6 @@
     .psychologistListContainer .searcBarComponent input {
         height: 30px;
         width: 30%;
-       
     }
     .psychologistListContainer .searcBarComponent img {
         height: 18px;
@@ -134,13 +132,16 @@
     .psychologistListContainer .cardToggle > a {
         text-align: center;
     }
+    .psychologistListContainer .patientTab .patientInfos .minPatient {
+        word-break: break-word;
+    }
 }
 
 @media only screen and (max-width: 613px) {
     .psychologistListContainer .patientInfos {
         flex-direction: column;
     }
-    .psychologistListContainer .patientTab{
+    .psychologistListContainer .patientTab {
         margin: 0px;
         margin: 20px 18px 50px 18px;
         padding: 14px;
@@ -163,5 +164,8 @@
     .psychologistListContainer .cardToggle button {
         width: 200px;
         font-size: 16px;
+    }
+    .psychologistListContainer .patientTab button {
+        margin-top: 20px;
     }
 }
